--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
 spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/serverdb
-spring.datasource.username=postgres
-spring.datasource.password=2991
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
